Fixed time parsing and patch update
